PSS/wwwroot/css/Trash.css
* {
    color: white;
    user-select: none;
    font-family: 'Product Sans', sans-serif;
}

h1 {
    font-family: 'Product Sans', sans-serif;
    text-align: center;
    position: absolute;
    left: 50%;
    top: 40%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    user-select: none;
}

header {
    display: flex;
    flex-direction: row;
    align-items: center;
    top: 0;
    left: 146px;
    position: fixed;
    height: 64px;
    right: 0;
    padding-top: 4px;
    padding-right: 100px;
    z-index: 999;
}

header .iconBtn {
    color: white;
    border-radius: 50%;
    width: 50px;
    height: 50px;
    border: none;
    background: none;
}

button:hover, .textBtn:hover {
    background-color: rgba(211, 211, 211, 0.1);
    cursor: pointer;
}

#selectedAmtText {
    font-size: 20px;
    color: white;
    left: 60px;
}

#clearBtn {
    margin-left: 5px;
    margin-right: 5px;
    margin-top: 2px;
}

header > div {
    display: flex;
    align-items: center;
    flex-direction: row;
    position: absolute;
    right: 20px;
}

header > div > .textBtn {
    margin-left: 10px;
    color: white; /* Icon Color */
    background-color: black;
    border: 1px solid white;
    border-radius: 4px;
    display: flex;
    word-break: break-word;
    word-wrap: break-word;
    align-items: center;
    letter-spacing: .01785714em;
    font-family: Product Sans, serif;
    font-size: 1rem;
    font-weight: 400;
    padding: 11px 17px;
}

button span ~ span {
    padding-left: 11px;
    text-decoration: none;
}

#sortDiv {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    position: absolute;
    top: 67px;
    right: 216px;
    background-color: black;
    border: 1px solid white;
    padding-right: 12px;
}

#sortDiv > button {
    width: 100%;
    border: none;
    background-color: black;
    display: flex;
    align-items: center;
    letter-spacing: .01785714em;
    font-family: Product Sans, sans-serif;
    font-size: 1rem;
    font-weight: 400;
    padding: 11px 11px 11px 10px;
}

#mainDiv {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    position: absolute;
    left: 145px;
    top: 60px;
}

#mainDiv > .thumbnail {
    position: relative;
    cursor: pointer;
}

#mainDiv > .thumbnail > .star-icon {
    position: absolute;
    left: 8px;
    bottom: 10px;
}

#mainDiv > .thumbnail > .checkbox {
    opacity: 0;
    position: absolute;
    margin-top: 8px;
    margin-left: 8px;
    transition: 0.3s;
}

#mainDiv > .thumbnail:hover > .unchecked { /* Show checkbox on hover */
    opacity: 0.42;
}

#mainDiv > .thumbnail > .unchecked:hover { /* Make it 100% opaque */
    opacity: 1;
}

#mainDiv > .thumbnail > .checked {
    color: #009FFF;
    opacity: 1;
}

#mainDiv > .thumbnail > img {
    height: 200px;
    margin-left: 3px;
    margin-right: 3px;
    margin-top: 3px;
}

